// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct error rate data 1`] = `
Array [
  Object {
    "x": 1627886760000,
    "y": null,
  },
  Object {
    "x": 1627886820000,
    "y": 0,
  },
  Object {
    "x": 1627886880000,
    "y": 0.5,
  },
  Object {
    "x": 1627886940000,
    "y": 0,
  },
  Object {
    "x": 1627887000000,
    "y": 0,
  },
  Object {
    "x": 1627887060000,
    "y": 0.2,
  },
  Object {
    "x": 1627887120000,
    "y": 0,
  },
  Object {
    "x": 1627887180000,
    "y": 0,
  },
  Object {
    "x": 1627887240000,
    "y": null,
  },
  Object {
    "x": 1627887300000,
    "y": null,
  },
  Object {
    "x": 1627887360000,
    "y": null,
  },
  Object {
    "x": 1627887420000,
    "y": 0,
  },
  Object {
    "x": 1627887480000,
    "y": 0.5,
  },
  Object {
    "x": 1627887540000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1627887600000,
    "y": 0,
  },
  Object {
    "x": 1627887660000,
    "y": 0.5,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct error rate data 2`] = `
Array [
  Object {
    "x": 1627886760000,
    "y": null,
  },
  Object {
    "x": 1627886820000,
    "y": 0,
  },
  Object {
    "x": 1627886880000,
    "y": 0,
  },
  Object {
    "x": 1627886940000,
    "y": null,
  },
  Object {
    "x": 1627887000000,
    "y": null,
  },
  Object {
    "x": 1627887060000,
    "y": 0,
  },
  Object {
    "x": 1627887120000,
    "y": 0,
  },
  Object {
    "x": 1627887180000,
    "y": 0,
  },
  Object {
    "x": 1627887240000,
    "y": 0,
  },
  Object {
    "x": 1627887300000,
    "y": 0,
  },
  Object {
    "x": 1627887360000,
    "y": 0,
  },
  Object {
    "x": 1627887420000,
    "y": 1,
  },
  Object {
    "x": 1627887480000,
    "y": 0,
  },
  Object {
    "x": 1627887540000,
    "y": 0,
  },
  Object {
    "x": 1627887600000,
    "y": 0,
  },
  Object {
    "x": 1627887660000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct latency data 1`] = `
Array [
  Object {
    "x": 1627886760000,
    "y": null,
  },
  Object {
    "x": 1627886820000,
    "y": 103346.2,
  },
  Object {
    "x": 1627886880000,
    "y": 89087,
  },
  Object {
    "x": 1627886940000,
    "y": 26149.4,
  },
  Object {
    "x": 1627887000000,
    "y": 7775,
  },
  Object {
    "x": 1627887060000,
    "y": 82303,
  },
  Object {
    "x": 1627887120000,
    "y": 19999,
  },
  Object {
    "x": 1627887180000,
    "y": 11071,
  },
  Object {
    "x": 1627887240000,
    "y": null,
  },
  Object {
    "x": 1627887300000,
    "y": null,
  },
  Object {
    "x": 1627887360000,
    "y": null,
  },
  Object {
    "x": 1627887420000,
    "y": 28927,
  },
  Object {
    "x": 1627887480000,
    "y": 31871,
  },
  Object {
    "x": 1627887540000,
    "y": 2542761.66666667,
  },
  Object {
    "x": 1627887600000,
    "y": 9855,
  },
  Object {
    "x": 1627887660000,
    "y": 33087,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct latency data 2`] = `
Array [
  Object {
    "x": 1627886760000,
    "y": null,
  },
  Object {
    "x": 1627886820000,
    "y": 36607,
  },
  Object {
    "x": 1627886880000,
    "y": 19519,
  },
  Object {
    "x": 1627886940000,
    "y": null,
  },
  Object {
    "x": 1627887000000,
    "y": null,
  },
  Object {
    "x": 1627887060000,
    "y": 22783,
  },
  Object {
    "x": 1627887120000,
    "y": 14527,
  },
  Object {
    "x": 1627887180000,
    "y": 15028.3333333333,
  },
  Object {
    "x": 1627887240000,
    "y": 181759,
  },
  Object {
    "x": 1627887300000,
    "y": 54271,
  },
  Object {
    "x": 1627887360000,
    "y": 35071,
  },
  Object {
    "x": 1627887420000,
    "y": 31487,
  },
  Object {
    "x": 1627887480000,
    "y": 8895,
  },
  Object {
    "x": 1627887540000,
    "y": 29439,
  },
  Object {
    "x": 1627887600000,
    "y": 35327,
  },
  Object {
    "x": 1627887660000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct throughput data 1`] = `
Array [
  Object {
    "x": 1627886760000,
    "y": 0,
  },
  Object {
    "x": 1627886820000,
    "y": 2,
  },
  Object {
    "x": 1627886880000,
    "y": 2,
  },
  Object {
    "x": 1627886940000,
    "y": 2,
  },
  Object {
    "x": 1627887000000,
    "y": 1,
  },
  Object {
    "x": 1627887060000,
    "y": 3,
  },
  Object {
    "x": 1627887120000,
    "y": 1,
  },
  Object {
    "x": 1627887180000,
    "y": 2,
  },
  Object {
    "x": 1627887240000,
    "y": 0,
  },
  Object {
    "x": 1627887300000,
    "y": 0,
  },
  Object {
    "x": 1627887360000,
    "y": 0,
  },
  Object {
    "x": 1627887420000,
    "y": 1,
  },
  Object {
    "x": 1627887480000,
    "y": 2,
  },
  Object {
    "x": 1627887540000,
    "y": 2,
  },
  Object {
    "x": 1627887600000,
    "y": 1,
  },
  Object {
    "x": 1627887660000,
    "y": 2,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns data with previous period returns correct throughput data 2`] = `
Array [
  Object {
    "x": 1627886760000,
    "y": 0,
  },
  Object {
    "x": 1627886820000,
    "y": 1,
  },
  Object {
    "x": 1627886880000,
    "y": 2,
  },
  Object {
    "x": 1627886940000,
    "y": 0,
  },
  Object {
    "x": 1627887000000,
    "y": 0,
  },
  Object {
    "x": 1627887060000,
    "y": 2,
  },
  Object {
    "x": 1627887120000,
    "y": 1,
  },
  Object {
    "x": 1627887180000,
    "y": 2,
  },
  Object {
    "x": 1627887240000,
    "y": 1,
  },
  Object {
    "x": 1627887300000,
    "y": 1,
  },
  Object {
    "x": 1627887360000,
    "y": 1,
  },
  Object {
    "x": 1627887420000,
    "y": 1,
  },
  Object {
    "x": 1627887480000,
    "y": 2,
  },
  Object {
    "x": 1627887540000,
    "y": 1,
  },
  Object {
    "x": 1627887600000,
    "y": 1,
  },
  Object {
    "x": 1627887660000,
    "y": 0,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns the correct data 1`] = `
Array [
  Object {
    "x": 1627885860000,
    "y": null,
  },
  Object {
    "x": 1627885920000,
    "y": 36607,
  },
  Object {
    "x": 1627885980000,
    "y": 19519,
  },
  Object {
    "x": 1627886040000,
    "y": null,
  },
  Object {
    "x": 1627886100000,
    "y": null,
  },
  Object {
    "x": 1627886160000,
    "y": 22783,
  },
  Object {
    "x": 1627886220000,
    "y": 14527,
  },
  Object {
    "x": 1627886280000,
    "y": 15028.3333333333,
  },
  Object {
    "x": 1627886340000,
    "y": 181759,
  },
  Object {
    "x": 1627886400000,
    "y": 54271,
  },
  Object {
    "x": 1627886460000,
    "y": 35071,
  },
  Object {
    "x": 1627886520000,
    "y": 31487,
  },
  Object {
    "x": 1627886580000,
    "y": 8895,
  },
  Object {
    "x": 1627886640000,
    "y": 29439,
  },
  Object {
    "x": 1627886700000,
    "y": 35327,
  },
  Object {
    "x": 1627886760000,
    "y": null,
  },
  Object {
    "x": 1627886820000,
    "y": 103346.2,
  },
  Object {
    "x": 1627886880000,
    "y": 89087,
  },
  Object {
    "x": 1627886940000,
    "y": 26149.4,
  },
  Object {
    "x": 1627887000000,
    "y": 7775,
  },
  Object {
    "x": 1627887060000,
    "y": 82303,
  },
  Object {
    "x": 1627887120000,
    "y": 19999,
  },
  Object {
    "x": 1627887180000,
    "y": 11071,
  },
  Object {
    "x": 1627887240000,
    "y": null,
  },
  Object {
    "x": 1627887300000,
    "y": null,
  },
  Object {
    "x": 1627887360000,
    "y": null,
  },
  Object {
    "x": 1627887420000,
    "y": 28927,
  },
  Object {
    "x": 1627887480000,
    "y": 31871,
  },
  Object {
    "x": 1627887540000,
    "y": 2542761.66666667,
  },
  Object {
    "x": 1627887600000,
    "y": 9855,
  },
  Object {
    "x": 1627887660000,
    "y": 33087,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns the correct data 2`] = `
Array [
  Object {
    "x": 1627885860000,
    "y": 0,
  },
  Object {
    "x": 1627885920000,
    "y": 1,
  },
  Object {
    "x": 1627885980000,
    "y": 2,
  },
  Object {
    "x": 1627886040000,
    "y": 0,
  },
  Object {
    "x": 1627886100000,
    "y": 0,
  },
  Object {
    "x": 1627886160000,
    "y": 2,
  },
  Object {
    "x": 1627886220000,
    "y": 1,
  },
  Object {
    "x": 1627886280000,
    "y": 2,
  },
  Object {
    "x": 1627886340000,
    "y": 1,
  },
  Object {
    "x": 1627886400000,
    "y": 1,
  },
  Object {
    "x": 1627886460000,
    "y": 1,
  },
  Object {
    "x": 1627886520000,
    "y": 1,
  },
  Object {
    "x": 1627886580000,
    "y": 2,
  },
  Object {
    "x": 1627886640000,
    "y": 1,
  },
  Object {
    "x": 1627886700000,
    "y": 1,
  },
  Object {
    "x": 1627886760000,
    "y": 0,
  },
  Object {
    "x": 1627886820000,
    "y": 2,
  },
  Object {
    "x": 1627886880000,
    "y": 2,
  },
  Object {
    "x": 1627886940000,
    "y": 2,
  },
  Object {
    "x": 1627887000000,
    "y": 1,
  },
  Object {
    "x": 1627887060000,
    "y": 3,
  },
  Object {
    "x": 1627887120000,
    "y": 1,
  },
  Object {
    "x": 1627887180000,
    "y": 2,
  },
  Object {
    "x": 1627887240000,
    "y": 0,
  },
  Object {
    "x": 1627887300000,
    "y": 0,
  },
  Object {
    "x": 1627887360000,
    "y": 0,
  },
  Object {
    "x": 1627887420000,
    "y": 1,
  },
  Object {
    "x": 1627887480000,
    "y": 2,
  },
  Object {
    "x": 1627887540000,
    "y": 2,
  },
  Object {
    "x": 1627887600000,
    "y": 1,
  },
  Object {
    "x": 1627887660000,
    "y": 2,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns the correct data 3`] = `
Array [
  Object {
    "x": 1627885860000,
    "y": null,
  },
  Object {
    "x": 1627885920000,
    "y": 0,
  },
  Object {
    "x": 1627885980000,
    "y": 0,
  },
  Object {
    "x": 1627886040000,
    "y": null,
  },
  Object {
    "x": 1627886100000,
    "y": null,
  },
  Object {
    "x": 1627886160000,
    "y": 0,
  },
  Object {
    "x": 1627886220000,
    "y": 0,
  },
  Object {
    "x": 1627886280000,
    "y": 0,
  },
  Object {
    "x": 1627886340000,
    "y": 0,
  },
  Object {
    "x": 1627886400000,
    "y": 0,
  },
  Object {
    "x": 1627886460000,
    "y": 0,
  },
  Object {
    "x": 1627886520000,
    "y": 1,
  },
  Object {
    "x": 1627886580000,
    "y": 0,
  },
  Object {
    "x": 1627886640000,
    "y": 0,
  },
  Object {
    "x": 1627886700000,
    "y": 0,
  },
  Object {
    "x": 1627886760000,
    "y": null,
  },
  Object {
    "x": 1627886820000,
    "y": 0,
  },
  Object {
    "x": 1627886880000,
    "y": 0.5,
  },
  Object {
    "x": 1627886940000,
    "y": 0,
  },
  Object {
    "x": 1627887000000,
    "y": 0,
  },
  Object {
    "x": 1627887060000,
    "y": 0.2,
  },
  Object {
    "x": 1627887120000,
    "y": 0,
  },
  Object {
    "x": 1627887180000,
    "y": 0,
  },
  Object {
    "x": 1627887240000,
    "y": null,
  },
  Object {
    "x": 1627887300000,
    "y": null,
  },
  Object {
    "x": 1627887360000,
    "y": null,
  },
  Object {
    "x": 1627887420000,
    "y": 0,
  },
  Object {
    "x": 1627887480000,
    "y": 0.5,
  },
  Object {
    "x": 1627887540000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1627887600000,
    "y": 0,
  },
  Object {
    "x": 1627887660000,
    "y": 0.5,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Transaction groups detailed statistics when data is loaded returns the correct data for latency aggregation 99th percentile 1`] = `
Array [
  Object {
    "x": 1627885860000,
    "y": null,
  },
  Object {
    "x": 1627885920000,
    "y": 36607,
  },
  Object {
    "x": 1627885980000,
    "y": 26367,
  },
  Object {
    "x": 1627886040000,
    "y": null,
  },
  Object {
    "x": 1627886100000,
    "y": null,
  },
  Object {
    "x": 1627886160000,
    "y": 29567,
  },
  Object {
    "x": 1627886220000,
    "y": 14527,
  },
  Object {
    "x": 1627886280000,
    "y": 33023,
  },
  Object {
    "x": 1627886340000,
    "y": 209919,
  },
  Object {
    "x": 1627886400000,
    "y": 54271,
  },
  Object {
    "x": 1627886460000,
    "y": 35071,
  },
  Object {
    "x": 1627886520000,
    "y": 31487,
  },
  Object {
    "x": 1627886580000,
    "y": 11903,
  },
  Object {
    "x": 1627886640000,
    "y": 29439,
  },
  Object {
    "x": 1627886700000,
    "y": 35327,
  },
  Object {
    "x": 1627886760000,
    "y": null,
  },
  Object {
    "x": 1627886820000,
    "y": 229375,
  },
  Object {
    "x": 1627886880000,
    "y": 92159,
  },
  Object {
    "x": 1627886940000,
    "y": 47871,
  },
  Object {
    "x": 1627887000000,
    "y": 7775,
  },
  Object {
    "x": 1627887060000,
    "y": 135167,
  },
  Object {
    "x": 1627887120000,
    "y": 24959,
  },
  Object {
    "x": 1627887180000,
    "y": 20479,
  },
  Object {
    "x": 1627887240000,
    "y": null,
  },
  Object {
    "x": 1627887300000,
    "y": null,
  },
  Object {
    "x": 1627887360000,
    "y": null,
  },
  Object {
    "x": 1627887420000,
    "y": 57855,
  },
  Object {
    "x": 1627887480000,
    "y": 44287,
  },
  Object {
    "x": 1627887540000,
    "y": 7372799,
  },
  Object {
    "x": 1627887600000,
    "y": 15487,
  },
  Object {
    "x": 1627887660000,
    "y": 48895,
  },
]
`;
